--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+tasks.jar{
+    manifest{
+        attributes['Main-Class'] = 'com.rlsanlo.apidomainbank.Application'
+    }
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
